2007-09-26  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/GrayPaintScale.java
	(getPaint): Use constrained value to calculate gray scale value,
	* tests/org/jfree/chart/renderer/junit/GrayPaintScaleTests.java
	(testConstructor): New test method,
	(testGetPaint): Likewise.

2007-09-26  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/xy/XYBarRenderer.java
	(drawItem): Apply margin in a way that works for inverted axes.

2007-09-26  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/PlotUtilities.java: New class,
	* source/org/jfree/data/general/DatasetUtilities.java
	(isEmptyOrNull(XYDataset)): Return early if not empty,
	* tests/org/jfree/data/general/junit/DatasetUtilitiesTests.java
	(testIsEmptyOrNullXYDataset): New test method.

2007-09-26  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/general/Series.java
	(getItemCount): New abstract method,
	(isEmpty): New method.

2007-09-26  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/XYPlot.java
	(getQuadrantPaint): Improve exception text,
	(setQuadrantPaint): Likewise,
	(getDomainAxisForDataset): Likewise,
	(getRangeAxisForDataset): Likewise.

2007-09-26  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/Marker.java
	(readObject): Initialise listener list,
	* tests/org/jfree/chart/plot/junit/ValueMarkerTests.java
	(test1802195): New test method.

2007-09-24  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/category/LineAndShapeRenderer.java
	(linesVisible): Deprecated,
	(shapesVisible): Likewise,
	(shapesFilled): Likewise,
	(getLinesVisible): Likewise,
	(setLinesVisible(Boolean)): Likewise,
	(setLinesVisible(boolean)): Likewise,
	(getShapesVisible): Likewise,
	(setShapesVisible(Boolean)): Likewise,
	(setShapesVisible(boolean)): Likewise,