@@ -1,5 +1,10 @@
 2007-09-26  David Gilbert  <david.gilbert@object-refinery.com>
 
+	* source/org/jfree/chart/renderer/category/StatisticalLineAndShapeRenderer.java
+	(drawItem): Simplified entity generation code.
+
+2007-09-26  David Gilbert  <david.gilbert@object-refinery.com>
+
 	* source/org/jfree/chart/renderer/GrayPaintScale.java
 	(getPaint): Use constrained value to calculate gray scale value,
 	* tests/org/jfree/chart/renderer/junit/GrayPaintScaleTests.java
